# TribesCheat

./: .gitignore  README.md  auth_offsets.db  main.py  notes.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  eelement-rework.md  element-rework.md  feature_request.md  question.md
data/receive/: default_response.py  users_me.py  world_create.py  world_join.py  world_listrewards.py  world_save.py
data/send/: users_saveuserdata.py  world_create.py  world_join.py  world_leave.py  world_listrewards.py  world_save.py  world_stats.py
utils/: compression.py  world.py
